# hybrid-cdc-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.specify/memory/: constitution.md
config/: masking-rules.yaml  pipeline.example.yaml  schema-mappings.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: 100_PERCENT_COMPLETION_PLAN.md  CONFIG_FIXES_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_ALL_FAILURES_PLAN.md  FIX_SUMMARY.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_RESULTS.md  IMPLEMENTATION_STATUS.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  REMAINING_12_FAILURES_FIX_PLAN.md  REMAINING_FAILURES_ANALYSIS.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_PROGRESS_2025-11-20.md  TEST_FAILURES_ANALYSIS.md  TEST_FIXES_IMPLEMENTATION_PLAN.md  TEST_FIX_IMPLEMENTATION_COMPLETE.md
scripts/: run-integration-tests.sh  seed-test-data.sh  setup-local-env.sh  wait-for-databases.sh
scripts/sql/: create-offset-table.sql
specs/001-secure-cdc-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-secure-cdc-pipeline/checklists/: requirements.md
specs/001-secure-cdc-pipeline/contracts/: config-schema.yaml  event-schema.json  metrics-api.yaml  offset-schema.json
src/: main.py
src/cdc/: __init__.py  offset.py  parser.py  reader.py
src/config/: loader.py  settings.py
src/dlq/: __init__.py  writer.py
src/models/: dead_letter_event.py  destination_sink.py  event.py  offset.py  schema.py
src/observability/: health.py  logging.py  metrics.py  tracing.py
src/sinks/: __init__.py  base.py  clickhouse.py  postgres.py  retry.py  timescaledb.py
src/transform/: __init__.py  masking.py  schema_mapper.py  validator.py
tests/: conftest.py
tests/chaos/: test_database_restart.py  test_network_partition.py  test_slow_destination.py
tests/contract/: test_event_schema.py  test_health_api.py  test_metrics_api.py  test_offset_schema.py
tests/integration/: test_add_column.py  test_alter_type.py  test_cassandra_to_clickhouse.py  test_cassandra_to_postgres.py  test_cassandra_to_timescaledb.py  test_crash_recovery.py  test_drop_column.py  test_exactly_once.py  test_health_checks.py  test_metrics_collection.py  test_pipeline_e2e_simple.py  test_pipeline_lifecycle.py  test_pipeline_startup.py  test_schema_incompatibility.py
tests/performance/: benchmark_throughput.py
tests/unit/: test_dlq.py  test_event_parsing.py  test_masking.py  test_metrics.py  test_offset_management.py  test_retry_logic.py  test_schema_detection.py  test_schema_mapper.py
